# zephyr_ble_sensor

./: CMakeLists.txt  README.md  prj.conf
boards/: adafruit_feather_nrf52840.overlay
images/: 6600_ma_hr_battery_box.stl  6600_ma_hr_box_lid.stl  6600_ma_hr_circuits_box.stl  zephyr_ble_sensor.sch
src/: bme680.c  bme680.h  bt_gatt_config.c  bt_gatt_config.h  main.c  vbatt.c  vbatt.h
